--- a/iql-web/src/main/resources/application.properties
+++ b/iql-web/src/main/resources/application.properties
@@ -1,36 +1,29 @@
 #####################################################
-#                       ±ØÌî                        #
+#                       ï¿½ï¿½ï¿½ï¿½                        #
 #####################################################
-# web ºóÌ¨mysqlµØÖ·
+# web ï¿½ï¿½Ì¨mysqlï¿½ï¿½Ö·
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/iql?useUnicode=true&characterEncoding=utf-8&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-
-# ÒýÇæ×¢²áµØÖ·
-zkServers=localhost:2181
-
-# ÓÃÓÚ½á¹ûÏÂÔØ
-hdfs.uri=hdfs://localhost:8020
-
+# ï¿½ï¿½ï¿½ï¿½×¢ï¿½ï¿½ï¿½Ö·
+#zkServers=localhost:2181
+# ï¿½ï¿½ï¿½Ú½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+#hdfs.uri=hdfs://localhost:8020
 #####################################################
-#                       Ñ¡Ìî                        #
+#                       Ñ¡ï¿½ï¿½                        #
 #####################################################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
-
-server.port=8888
+server.port=18887
 server.session.cookie.max-age=288000
 server.session.timeout=28800
-
 multipart.max-file-size=100MB
 multipart.max-request-size=2048MB
 
